// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Dialog - renders 1`] = `
<dialog
  aria-describedby="aria-describe-dia"
  aria-labelledby="aria-label-dia"
  aria-modal="true"
  className=""
  open={false}
>
  

  <header>
    

    <h4 />
    

    <button
      aria-label="Close dialog"
      className="dialog-close"
      data-dialog-close={true}
      type="button"
    />
    

  </header>
  

  <div
    className="dialog-body"
  />
  

  <footer>
    

    <button
      className="btn btn-secondary btn-sm"
      data-dialog-close={true}
      type="button"
    >
      Cancel
    </button>
    

    <button
      className="btn btn-primary btn-sm"
      type="button"
    >
      Delete
    </button>
    

  </footer>
  

</dialog>
`;

exports[`Component: Dialog - renders with the passed ID 1`] = `
<dialog
  aria-describedby="aria-describe-dia"
  aria-labelledby="aria-label-dia"
  aria-modal="true"
  className=""
  open={false}
>
  

  <header>
    

    <h4 />
    

    <button
      aria-label="Close dialog"
      className="dialog-close"
      data-dialog-close={true}
      type="button"
    />
    

  </header>
  

  <div
    className="dialog-body"
  />
  

  <footer>
    

    <button
      className="btn btn-secondary btn-sm"
      data-dialog-close={true}
      type="button"
    >
      Cancel
    </button>
    

    <button
      className="btn btn-primary btn-sm"
      type="button"
    >
      Delete
    </button>
    

  </footer>
  

</dialog>
`;

exports[`Component: Dialog - renders with the passed children 1`] = `
<dialog
  aria-describedby="aria-describe-dia"
  aria-labelledby="aria-label-dia"
  aria-modal="true"
  className=""
  open={false}
>
  

  <header>
    

    <h4 />
    

    <button
      aria-label="Close dialog"
      className="dialog-close"
      data-dialog-close={true}
      type="button"
    />
    

  </header>
  

  <div
    className="dialog-body"
  >
    <p>
      My paragraph
    </p>
  </div>
  

  <footer>
    

    <button
      className="btn btn-secondary btn-sm"
      data-dialog-close={true}
      type="button"
    >
      Cancel
    </button>
    

    <button
      className="btn btn-primary btn-sm"
      type="button"
    >
      Delete
    </button>
    

  </footer>
  

</dialog>
`;

exports[`Component: Dialog - renders with the passed header 1`] = `
<dialog
  aria-describedby="aria-describe-dia"
  aria-labelledby="aria-label-dia"
  aria-modal="true"
  className=""
  open={false}
>
  

  <header>
    

    <h4>
      My heading
    </h4>
    

    <button
      aria-label="Close dialog"
      className="dialog-close"
      data-dialog-close={true}
      type="button"
    />
    

  </header>
  

  <div
    className="dialog-body"
  />
  

  <footer>
    

    <button
      className="btn btn-secondary btn-sm"
      data-dialog-close={true}
      type="button"
    >
      Cancel
    </button>
    

    <button
      className="btn btn-primary btn-sm"
      type="button"
    >
      Delete
    </button>
    

  </footer>
  

</dialog>
`;
